# xsc-governance

./: .env  .gitignore  Cargo.toml  README.md  file.db  rust-toolchain  username.csv
.github/workflows/: build.yml
assets/: activity.csv  data.json  whitelist.csv
governance-cli/: Cargo.toml  config.toml
governance-cli/src/: args.rs  main.rs
governance-core/: Cargo.toml
governance-core/src/: config.rs  csv_parser.rs  gql.rs  json.rs  lib.rs  models.rs
governance-core/src/models/: activity.rs  address.rs  events.rs  mod.rs  tests.rs  transfer.rs  whitelist.rs
governance-core/tests/: json_test.rs  validity_test.rs
src/: csv_parser.rs  main.rs  models.rs
src/graphql/: mod.rs  schema.rs
