[package]
name = "governance-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
governance-core = { path = "../governance-core" }
csv = "1.1.6"
clap = { version = "4.0.18", features = ["derive"] }
tokio = { version = "1", features = ["full"] }