[package]
name = "governance-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
governance-core = { path = "../governance-core" }
csv = "1.1"
clap = { version = "4.0", features = ["derive", "env"] }
tokio = { version = "1.21", features = ["full"] }
canonical = "0.7.1"
dusk-bls12_381 = { version = "0.9", default-features = false, features = ["alloc", "pairings", "endo"] }
blake2 = { version = "0.10", default-features = false }
dusk-bytes = "0.1"
dusk-wallet = { git = "https://github.com/dusk-network/wallet-cli.git", branch = "main" }