[package]
name = "governance-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Parsing
csv = "1.1.6"
serde = { version = "1", features = ["derive"] }
tracing = "0.1.37"

# Data type helpers
tai64 = { version = "4.0.0", features = ["serde"] }
bs58 = "0.4.0"
toml-base-config = "0.1.0"
canonical = "0.7.1"

# Stack
dusk-wallet = { git = "https://github.com/Daksh14/wallet-cli.git", branch = "wallet_method_test" }
dusk-wallet-core = { git = "https://github.com/dusk-network/wallet-core.git" }
rand = "0.8.5"
dusk-pki = "0.10.0-rc.1"
dusk-bytes = "0.1.6"
dusk-abi = "0.11.0"